# karachi-aqi-predictor

./: .gitignore  backfill.py  feature_pipeline.py  main.py  pyproject.toml  replit.md  replit.nix  requirements.txt  training_pipeline.py
.github/workflows/: features.yml  train.yml
